--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <p>
       Make something <strong>amazing</strong> with the web.
     </p>
-    <button type="button" text="Submit" id="btnAdd"> Submit</button>
+    <button type="button" text="Submit" id="btnAdd" name="btnAdd"> Submit</button>
   </body>
    <script type="text/javascript" src="index.js" ></script>
 </html>
